--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-
-<!DOCTYPE html>\
-<html>\
-<body>\
-<h1>Audio-Driven 3D Talking Face using Diffusion</h1>\
-</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green and White Themed Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to Our Website</h1>
+    </header>
+    <div class="container">
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac libero a orci laoreet egestas.</p>
+        <h2>Services</h2>
+        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer nec odio.</p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Our Website. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
