--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green and White Themed Website</title>
+    <title>Audio-Driven 3D Talking Face</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
