--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio-Driven 3D Talking Face</title>
+    <title>Research Project Presentation</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <header>
-        <h1>Audio-Driven 3D Talking Face</h1>
+        <h1>Research Project Presentation</h1>
     </header>
     <div class="container">
         <section id="introduction">
@@ -28,7 +28,18 @@
                 </video>
             </div>
         </section>
+        <section id="details">
+            <h2>Project Details</h2>
+            <p>Here, you will find detailed information about our research methods, data analysis, and conclusions.</p>
+            <button id="moreDetailsButton">Show More Details</button>
+            <div id="moreDetails" style="display: none;">
+                <p>Our research involved extensive data collection and analysis, utilizing state-of-the-art techniques...</p>
+            </div>
+        </section>
     </div>
+    <footer>
+        <p>&copy; 2024 Research Project. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
