--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Project Presentation</title>
+    <title>Audio-Driven 3D Talking Face</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <header>
-        <h1>Research Project Presentation</h1>
+        <h1>Audio-Driven 3D Talking Face using Diffusion</h1>
+        <h3>Cheryl Wang, Kai Gomez, Shobana Ravi, Steven Hogue, Ningna Wang, Xiaohu Guo</h3>
     </header>
     <div class="container">
         <section id="introduction">
