--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio-Driven 3D Talking Face</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Audio-Driven 3D Talking Face using Diffusion</h1>
-        <h3>Cheryl Wang, Kai Gomez, Shobana Ravi, Steven Hogue, Ningna Wang, Xiaohu Guo</h3>
     </header>
     <div class="container">
         <section id="introduction">
@@ -29,6 +28,18 @@
                 </video>
             </div>
         </section>
+        <section id="details">
+            <h2>Project Details</h2>
+            <p>Here, you will find detailed information about our research methods, data analysis, and conclusions.</p>
+            <button id="moreDetailsButton">Show More Details</button>
+            <div id="moreDetails" style="display: none;">
+                <p>Our research involved extensive data collection and analysis, utilizing state-of-the-art techniques...</p>
+            </div>
+        </section>
     </div>
+    <footer>
+        <p>&copy; 2024 Research Project. All Rights Reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
