--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ From putting a face on virtual assistants to creating animated instructors to ma
                     <source src="video2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <video controls>
+                    <source src="video1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </section>
         <section id="details">
