--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ From putting a face on virtual assistants to creating animated instructors to ma
                 </video>
             </div>
         </section>
+        <section>
+            <h2>Thank You!</h2>
+        </section>
     </div>
     <script src="script.js"></script>
 </body>
