--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Audio-Driven 3D Talking Face using Diffusion</h1>
-        
+        <h3>Cheryl Wang, Kai Gomez, Shobana Ravi, Steven Hogue, Ningna Wang, Xiaohu Guo</h3>
     </header>
     <div class="container">
         <section id="introduction">
